--- a/core/new-gui/src/app/workspace/component/input-autocomplete/input-autocomplete.component.html
+++ b/core/new-gui/src/app/workspace/component/input-autocomplete/input-autocomplete.component.html
@@ -5,7 +5,7 @@
   required
   [nzAutocomplete]="auto"
   [formControl]="props.formControl"
-  [formlyAttributes]="field" />
+  [formlyAttributes]="props.field" />
 <div
   class="alert alert-danger"
   role="alert"
