--- a/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-version-creator/user-dataset-version-creator.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-version-creator/user-dataset-version-creator.component.html
@@ -17,6 +17,7 @@
 <!--      (uploadedFiles)="onNewUploadFilesChanged($event)"-->
 <!--      (removingFilePaths)="onRemovingFilePathsChanged($event)"-->
 <!--      [previouslyUploadFiles]="baseVersion?.versionFileTreeNodes"></texera-user-files-uploader>-->
+    <texera-user-files-uploader></texera-user-files-uploader>
   </div>
 
   <button
