--- a/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-version-filetree/user-dataset-version-filetree.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-version-filetree/user-dataset-version-filetree.component.html
@@ -1,4 +1,28 @@
 <div class="file-tree-container">
+  <nz-tree
+    nzBlockNode
+    [nzData]="nodes"
+    (nzClick)="onNodeSelected($event)"
+    [nzTreeTemplate]="nzTreeTemplate"
+  ></nz-tree>
+  <ng-template #nzTreeTemplate let-node let-origin="origin">
+      <span class="custom-node">
+        <span *ngIf="!node.isLeaf" (contextmenu)="contextMenu($event, menu)">
+          <span nz-icon [nzType]="node.isExpanded ? 'folder-open' : 'folder'" (click)="openFolder(node)"></span>
+          <span class="folder-name">{{ node.title }}</span>
+        </span>
+        <span *ngIf="node.isLeaf" (contextmenu)="contextMenu($event, menu)">
+          <span nz-icon nzType="file"></span>
+          <span class="file-name">{{ node.title }}</span>
+        </span>
+      </span>
+  </ng-template>
+  <nz-dropdown-menu #menu="nzDropdownMenu">
+    <ul nz-menu>
+      <li nz-menu-item (click)="selectDropdown()">Action 1</li>
+      <li nz-menu-item (click)="selectDropdown()">Action 2</li>
+    </ul>
+  </nz-dropdown-menu>
 <!--  <tree-root-->
 <!--    [nodes]="fileTreeNodeList"-->
 <!--    [options]="fileTreeDisplayOptions">-->
