--- a/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
@@ -82,18 +82,7 @@
           nzType="comment"></span>
         <span>Forum</span>
       </li>
-
-      <li
-        *ngIf="isAdmin"
-        nz-submenu>
-        <span
-          class="submenu"
-          title>
-          <span
-            nz-icon
-            nzType="tool"></span>
-          <span>Admin</span>
-        </span>
+      <li *ngIf="isAdmin" nz-submenu nzTitle="Admin" nzIcon="tool">
         <ul>
           <li
             nz-menu-item
