memorize property panel location and status

--- a/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.html
@@ -40,7 +40,7 @@
       </li>
       <li
         nz-menu-item
-        nzSelected
+        nzSelected="{{!this.propertyDisplay}}"
         cdkDragHandle
         *ngIf="!this.propertyDisplay">
         <span
@@ -50,7 +50,7 @@
       </li>
       <li
         nz-menu-item
-        nzSelected
+        nzSelected="{{this.propertyDisplay}}"
         (click)="openPropertyPanel()">
         <span
           nz-icon
