memorize minimap location and status

--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
@@ -26,6 +26,7 @@
       id="dock">
       <li
         nz-menu-item
+        nzSelected="{{this.minimapDisplay}}"
         (click)="openMiniMapPanel()">
         <span
           nz-icon
@@ -43,7 +44,7 @@
       </li>
       <li
         nz-menu-item
-        nzSelected
+        nzSelected="{{!this.minimapDisplay}}"
         cdkDragHandle
         *ngIf="!this.minimapDisplay">
         <span
