--- a/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
@@ -82,11 +82,7 @@
           nzType="comment"></span>
         <span>Forum</span>
       </li>
-      <li
-        *ngIf="isAdmin"
-        nz-submenu
-        nzTitle="Admin"
-        nzIcon="tool">
+      <li *ngIf="isAdmin" nz-submenu nzTitle="Admin" nzIcon="tool">
         <ul>
           <li
             nz-menu-item
