--- a/core/new-gui/src/app/dashboard/user/component/files-uploader/files-uploader.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/files-uploader/files-uploader.component.html
@@ -62,6 +62,8 @@
     <h6 class="new-upload-title">New Uploads</h6>
     <texera-user-dataset-version-filetree
       [fileTreeNodes]="newUploadFileTreeNodes"
+      [isTreeNodeDeletable]="true"
+      (deletedTreeNode)="onNewUploadsFileDeleted($event)"
     ></texera-user-dataset-version-filetree>
     <!--      [isFileTreeNodeDeletable]="true"-->
     <!--      (deletedTreeNode)="onNewUploadsFileDeleted($event)">-->
