--- a/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-version-filetree/user-dataset-version-filetree.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-version-filetree/user-dataset-version-filetree.component.html
@@ -1,28 +1,39 @@
 <div class="file-tree-container">
-  <nz-tree
-    nzBlockNode
-    [nzData]="nodes"
-    (nzClick)="onNodeSelected($event)"
-    [nzTreeTemplate]="nzTreeTemplate"
-  ></nz-tree>
-  <ng-template #nzTreeTemplate let-node let-origin="origin">
-      <span class="custom-node">
-        <span *ngIf="!node.isLeaf" (contextmenu)="contextMenu($event, menu)">
-          <span nz-icon [nzType]="node.isExpanded ? 'folder-open' : 'folder'" (click)="openFolder(node)"></span>
-          <span class="folder-name">{{ node.title }}</span>
-        </span>
-        <span *ngIf="node.isLeaf" (contextmenu)="contextMenu($event, menu)">
-          <span nz-icon nzType="file"></span>
-          <span class="file-name">{{ node.title }}</span>
-        </span>
-      </span>
-  </ng-template>
-  <nz-dropdown-menu #menu="nzDropdownMenu">
-    <ul nz-menu>
-      <li nz-menu-item (click)="selectDropdown()">Action 1</li>
-      <li nz-menu-item (click)="selectDropdown()">Action 2</li>
-    </ul>
-  </nz-dropdown-menu>
+  <nz-tree-view [nzTreeControl]="treeControl" [nzDataSource]="dataSource" [nzDirectoryTree]="true">
+    <nz-tree-node *nzTreeNodeDef="let node" nzTreeNodePadding>
+      <nz-tree-node-toggle nzTreeNodeNoopToggle></nz-tree-node-toggle>
+      <nz-tree-node-option
+        [nzDisabled]="node.disabled"
+        [nzSelected]="selectListSelection.isSelected(node)"
+        (nzClick)="onNodeSelected(node)"
+      >
+        <span nz-icon nzType="file" nzTheme="outline"></span>
+        {{ node.name }}
+      </nz-tree-node-option>
+      <button
+        *ngIf="isTreeNodeDeletable"
+        nz-button nzType="default" nzSize="small" (click)="onNodeDeleted(node)">
+        <span nz-icon nzType="delete" nzTheme="outline"></span>
+      </button>
+    </nz-tree-node>
+
+    <nz-tree-node *nzTreeNodeDef="let node; when: hasChild" nzTreeNodePadding>
+      <nz-tree-node-toggle>
+        <span nz-icon nzType="caret-down" nzTreeNodeToggleRotateIcon></span>
+      </nz-tree-node-toggle>
+      <nz-tree-node-option
+        [nzDisabled]="node.disabled"
+      >
+        <span nz-icon [nzType]="treeControl.isExpanded(node) ? 'folder-open' : 'folder'" nzTheme="outline"></span>
+        {{ node.name }}
+      </nz-tree-node-option>
+      <button
+        *ngIf="isTreeNodeDeletable"
+        nz-button nzType="default" nzSize="small" (click)="onNodeDeleted(node)">
+        <span nz-icon nzType="delete" nzTheme="outline"></span>
+      </button>
+    </nz-tree-node>
+  </nz-tree-view>
 <!--  <tree-root-->
 <!--    [nodes]="fileTreeNodeList"-->
 <!--    [options]="fileTreeDisplayOptions">-->
