--- a/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-list-item/user-dataset-list-item.component.scss
+++ b/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-list-item/user-dataset-list-item.component.scss
@@ -4,46 +4,65 @@
 /**
   * css for project label, shared by workflow section and file section
 **/
-.project-label-container {
-  min-width: 20px;
-  display: flex;
-  flex-direction: row-reverse;
-  overflow-x: auto;
+.dataset-list-item {
+  margin-bottom: 10px;
+  min-height: 70px;
+  padding: 5px 0 5px 0;
 
-  .project-label {
-    display: inline;
-    white-space: nowrap;
+  .dataset-item-meta {
+    margin: 0 20px;
+  }
 
-    .color-tag {
+  .dataset-item-meta-title {
+    display: flex;
+    align-items: center;
+
+    .dataset-name {
+      color: black;
+      font-size: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      text-align: center;
+    }
+
+    i {
+      position: relative;
+      font-size: 17px;
+      margin-bottom: 6px;
+    }
+
+    i.dataset-is-owner-icon {
+      margin-left: 7px;
+    }
+  }
+
+  .dataset-item-meta-description {
+    display: flex;
+    align-items: center;
+    padding: 2px 8px 2px 10px;
+    margin-bottom: 8px;
+
+    .dataset-description-label {
+      font-size: 13px;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+
       display: inline-block;
-      cursor: pointer;
+      min-width: 17ch;
+      border: 0 none;
+      outline: none;
+
+      &:hover {
+        cursor: pointer;
+        box-shadow: 0 0 0 1px rgb(202, 202, 202);
+      }
     }
 
-    .project-label-name {
-      padding: 1.5px 7px;
-      border-top-left-radius: 2px;
-      border-bottom-left-radius: 2px;
-      color: inherit;
-      text-decoration: none;
-    }
-
-    .project-label-remove {
-      padding: 1.5px 7px;
-      border-top-right-radius: 2px;
-      border-bottom-right-radius: 2px;
-      margin-right: 10px;
-    }
-
-    .light-color {
-      border: 1px solid gainsboro;
-    }
-
-    .light-color:hover {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0 0);
-    }
-
-    .dark-color:hover {
-      background-image: linear-gradient(rgba(255, 255, 255, 0.345) 0 0);
+    .dataset-editable-description-input {
+      margin-bottom: 5px;
+      display: inline-block;
+      min-width: 17ch;
+      border: 0 none;
+      outline: none;
+      box-shadow: 0 0 0 2px #007bff;
     }
   }
 }
