--- a/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset.component.html
@@ -58,8 +58,7 @@
           [entry]="entry"
           (deleted)="deleteDataset(entry.dataset.did)"
           (refresh)="ngOnInit()"
-          [editable]="true"
-        ></texera-user-dataset-list-item>
+          [editable]="true"></texera-user-dataset-list-item>
       </nz-list>
     </cdk-virtual-scroll-viewport>
   </nz-card>
