--- a/core/new-gui/src/app/dashboard/user/component/files-uploader/files-uploader.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/files-uploader/files-uploader.component.html
@@ -36,7 +36,8 @@
     <texera-user-dataset-version-filetree
       [fileTreeNodes]="previouslyUploadFiles"
       [isTreeNodeDeletable]="true"
-      (deletedTreeNode)="onPreviouslyUploadedFileDeleted($event)"></texera-user-dataset-version-filetree>
+      (deletedTreeNode)="onPreviouslyUploadedFileDeleted($event)">
+    </texera-user-dataset-version-filetree>
   </div>
   <div
     *ngIf="newUploadNodeToFileItems && newUploadNodeToFileItems.size > 0"
