--- a/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.html
@@ -6,7 +6,7 @@
 
 
 <div
-  *ngIf="isOperatorSelected"
+  [hidden]="!isOperatorSelected"
   cdkDrag
   id="property-editor-container"
   nz-resizable
