--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -1,20 +1,21 @@
-<div [ngClass]="{
+<div
+  [ngClass]="{
   'grid-container': true,
   'texera-workspace': true,
   'texera-original-workspace-grid-container': !this.showResultPanel,
   'texera-workspace-grid-container': this.showResultPanel,
   'user-system-enabled': this.userSystemEnabled
 }">
-<texera-menu [pid]="pid"></texera-menu>
-<texera-left-panel></texera-left-panel>
-<span id="git-commit-id">Version 0.5.3 <br />Git hash: {{ gitCommitHash }}</span>
-<ng-template #codeEditor></ng-template>
-<!-- <div class="texera-property-editor-container"> -->
+  <texera-menu [pid]="pid"></texera-menu>
+  <texera-left-panel></texera-left-panel>
+  <span id="git-commit-id">Version 0.5.3 <br />Git hash: {{ gitCommitHash }}</span>
+  <ng-template #codeEditor></ng-template>
+  <!-- <div class="texera-property-editor-container"> -->
   <texera-property-editor></texera-property-editor>
-<!-- </div> -->
-<texera-mini-map></texera-mini-map>
-<texera-workflow-editor class="texera-workflow-editor-grid-container grid-container"></texera-workflow-editor>
-<texera-result-panel-toggle class="texera-result-panel-toggle-grid-container"></texera-result-panel-toggle>
-<texera-result-panel class="texera-result-panel-grid-container grid-container"></texera-result-panel>
+  <!-- </div> -->
+  <texera-mini-map></texera-mini-map>
+  <texera-workflow-editor class="texera-workflow-editor-grid-container grid-container"></texera-workflow-editor>
+  <texera-result-panel-toggle class="texera-result-panel-toggle-grid-container"></texera-result-panel-toggle>
+  <texera-result-panel class="texera-result-panel-grid-container grid-container"></texera-result-panel>
 </div>
 <!-- <texera-property-editor></texera-property-editor> -->
