--- a/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.scss
+++ b/core/new-gui/src/app/workspace/component/property-editor/property-editor.component.scss
@@ -19,14 +19,17 @@
   user-select: none;
   background: white;
   border-radius: 3px;
-  box-shadow: 0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
+  box-shadow:
+    0 3px 1px -2px #0003,
+    0 2px 2px #00000024,
+    0 1px 5px #0000001f;
 }
 
 #right-panel-content {
   display: inline-block;
   overflow: auto;
   width: calc(100% - 47px);
-  height: calc(100%)
+  height: calc(100%);
 }
 
 #title {
