--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
@@ -18,7 +18,10 @@
   user-select: none;
   background: white;
   border-radius: 3px;
-  box-shadow: 0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
+  box-shadow:
+    0 3px 1px -2px #0003,
+    0 2px 2px #00000024,
+    0 1px 5px #0000001f;
 }
 
 #mini-map-content {
