--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
@@ -1,13 +1,11 @@
 <div
-  cdkDrag
   id="mini-map-container"
   [style.width.px]="miniMapWidth">
   <div
     id="mini-map-content"
     *ngIf="this.minimapDisplay">
     <h6
-      id="title"
-      cdkDragHandle>
+      id="title">
       Mini Map
     </h6>
     <div style="position: relative">
@@ -45,7 +43,6 @@
     <li
       nz-menu-item
       nzSelected="{{!this.minimapDisplay}}"
-      cdkDragHandle
       *ngIf="!this.minimapDisplay">
       <span
         nz-icon
